Fix Linux script and use it